--- a/page2.html
+++ b/page2.html
@@ -10,4 +10,8 @@ base: /
 
             <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
+{% capture my_include %}{% include page2content.md %}{% endcapture %}
+{{ my_include | markdownify }}
+
+
 {% include footer.html %}
