--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@ base: /
 
             <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-{% capture my_include %}{% include page2content.md %}{% endcapture %}
+{% capture my_include %}{% include Page2Content.md %}{% endcapture %}
 {{ my_include | markdownify }}
 
 
