--- a/page3.html
+++ b/page3.html
@@ -1,16 +1,18 @@
 ---
-title:  Page 3 - Posts
+title:  Posts
 base: /
 ---
 {% include header.html %}
 
-    {% for post in site.posts limit:5 %}
+{% assign allPosts = (site.posts | where: 'category', 'blog') %}
+
+    {% for post in allPosts %}
     <h3 > {{post.title}}
         <!-- <a href="{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a> -->
         <!-- <a href="{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a> -->
       </h3>
 
-      {{ post.content }}
+      {{ post.excerpt }}
 
         <a href="{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a>
 
