--- a/page3.html
+++ b/page3.html
@@ -14,7 +14,7 @@ base: /
 
       {{ post.excerpt }}
 
-        <a href="{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a>
+        <a href="{{ site.baseurl }}{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a>
 
     {% endfor %}
 {% include footer.html %}
