--- a/page3.html
+++ b/page3.html
@@ -7,10 +7,7 @@ base: /
 {% assign allPosts = (site.posts | where: 'category', 'blog') %}
 
     {% for post in allPosts %}
-    <h3 > {{post.title}}
-        <!-- <a href="{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a> -->
-        <!-- <a href="{{ post.url }}"> {{ post.date | date_to_string }} &raquo; {{ post.title }} </a> -->
-      </h3>
+    <h3 > {{post.title}} </h3>
 
       {{ post.excerpt }}
 
